--- a/comp_g.html
+++ b/comp_g.html
@@ -88,19 +88,19 @@
 
         <h4> 1) Exercise: Creating a Sock Collection & Database </h4>
         <div> <p style="display:block;"> This piece of evidence contains three attachments, which together form one whole project. For this project, I was tasked to catalog socks into a database with a controlled vocabulary system. </p></div>
-        <div style="float:left;"><a href="includes/comp_g/DavenportExercise1A.pdf"> <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
+        <div style="float:left;"><a href="includes/DavenportExercise1A.pdf"> <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
         <div style="display:block;"> <h4> Part A </h4><p> In part A, I listed the socks and their characteristics. This allowed me to identify "fields," a set list of six descriptive categories from which each pair of socks can be individually identified. </p> </div>
         <div style="clear:both;"> </div>
-        <div style="float:left;"><a href="includes/comp_g/Part 2_ Building the Data Structure.pdf">  <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
+        <div style="float:left;"><a href="includes/Part 2_ Building the Data Structure.pdf">  <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
         <div style="display:block;"> <h4> Part B </h4> <p> In part B, I created a finite list of terms to use for each of the six "fields." This list of terms is my "controlled vocabulary list." This vocabulary list provides options to select from in order to find particular socks. </p>
         <div style="clear:both;"> </div>
-        <div style="float:left;"><a href="includes/comp_g/assignment 1C - making rules.pdf">  <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
+        <div style="float:left;"><a href="includes/assignment 1C - making rules.pdf">  <img src="images/mail.png" style="width:150px; height:150px;"> </img> </a></div>
         <div style="display:block;"> <h4> Part C </h4> <p> In part C, I provided instructions for the two difficult attributes. These instructions are intended for those who add to or modify the sock collection to follow. This is necessary to eliminate confusion when adding attributes to new socks. For example, in the "material" field, I explain how to describe the sock material if there's just one kind of material, and if the sock has a blend of materials. </p>
         <div style="clear:both;"> </div>
         <p> <span style="font-weight:bolder;"> Purpose: </span> I included these assignments as one piece of evidence of my ability to create and assign vocabulary terms as metadata for items in a collection. </p> 
 
         <h4> 2) Assignment: MARC Record </h4>
-        <a href="includes/comp_g/descriptive cataloging_bookA.pdf"> <img src="includes/comp_g/book_a_photo.jpg" style="width:150px; height:auto; float: left; padding-right:15px; padding-left:15px; padding-bottom:15px;"> </a>
+        <a href="includes/descriptive cataloging_bookA.pdf"> <img src="includes/book_a_photo.jpg" style="width:150px; height:auto; float: left; padding-right:15px; padding-left:15px; padding-bottom:15px;"> </a>
         <p style="display:block;"> <span style="font-weight:bolder;"> Click the image on the left to view the assignment: </span>MARC Record (created from scratch) for <i> Body Language in Business: Decoding the Signals" </i>by Furnham & Petrova. </p>
         <p style="clear:both;"> This piece of evidence contains a MARC record I created from scratch in INFO 248: Beginning Cataloging and Classification. The purpose of a MARC record is to provide a universal marker for a book. The MARC record is recognized as a record system for all libraries. On any given library website, a patron can search for a book in the online library catalog and find its details clearly listed in a MARC record. This way, the patron can confirm that it's the book they're looking for based on the details in the provided description. LIS professionals do not necessarily need to create MARC records from scratch, but may be unable to find a MARC record for a rare book in their catalog, or may want to edit a MARC record to take out unnecessary fields. </p> 
         <p> I included this piece of evidence to demonstrate my ability to catalog books using MARC-21 format. I've used MARC-21 to catalog new books at work if I can't locate the MARC record in our library circulation system already. </p> <br>
