--- a/conclusion.html
+++ b/conclusion.html
@@ -38,37 +38,51 @@
     </nav>
     <aside> 
         <h3> Definition: </h3>
-        <p> Here are my final thoughts and reflections on my work in SJSU's MLIS program. </p> <br> 
+        <p> Here are my final thoughts and reflections on my work in SJSU's MLIS program. </p> 
+
+        <h3> More information: </h3>
+        <ul>
+            <li>  <a href="main.html"> Main page </a></li>
+            <li>  <a href="#footer"> Contact information </a>
+        </ul>
+        <br> 
+
     </aside>
     <main> 
-    <h3> My final thoughts:</h3>
+    <h3> My final thoughts: "The Liberry Patch" </h3>
     <img src="images/liberry_crop.png" style="max-width: 100%; height:auto;"> </img>
-    <p> In INFO 203, when we made our wordpress blog, I created this image as my blog banner. Summed up in this picture are my values: creativity, exploration, imagination, and nature appreciation. In this program, I've learned a lot of new skills. I've also learned how to apply my own values to librarianship. </p> <br>
+    <p> In INFO 203, when we made our wordpress blog, I created this image as my blog banner. Summed up in this picture are the aspects of learning that I love most: creativity, exploration, imagination, and nature appreciation. In this program, I've learned a lot of new skills. I've also learned how to apply my own values to librarianship. </p>
 
-
-    <img src="images/bergis.png" style="width:300px; height:auto; float:left; padding-right:25px; padding-bottom:15px;"> 
-
-    <p style="display:block;"> <span style="font-weight:bolder;"> Left: In this blog post, Luke Burgis wrote as advice to "live out your personal vocation." </span> He further explains that "When you have a mission, it begins to act like an interpretative key to everything and allows you to know what to pay attention to" (<a href="https://read.lukeburgis.com/p/25-anti-mimetic-ideas?s=r">The Fourth Wall</a>). This blog post may require a subscription to read. If so: to the left is a picture of the section I reference here. I do feel like librarianship is my "interpretive key to everything." I really enjoy hobbies like running, playing the piano, gardening, and hiking. I also enjoy participating in my science fiction writing group, and making art projects with my sister. In these extra-curriculars, I find myself employing the concepts that I learned in reference and information literacy, where we discussed how to 'determine the patron's real question' and how to teach patrons how to teach themselves. I also have learned to embrace my interdisciplinary side. I studied the health sciences and history in college, and didn't expect these interests to overlap in a future career. Except that now, I am a library assistant at a health sciences college, and I get to create projects like "health heroes from history." Librarianship has combined many aspects of my life into one common thread. </p>
-   
     <h4> Skills I use most: </h4>
-    <p> I'm grateful for the skills I've learned in this program: library instruction and reference, advocacy, patron assistance, and coding. I've learned that instructing is different than lecturing: library instruction is interactive and engaging and makes learning a more natural process. I also learned that librarians need to advocate for their library and its resources. In two courses, booktalking & booktrailering and reference services, I learned how to use my creative side in library outreach, and how to encourage patrons to participate in library services. </p>
+    <p> I'm grateful for the skills I've learned in this program: library instruction and reference, advocacy, patron assistance, video-making and coding. I've learned that instructing is different than lecturing: library instruction is interactive and engaging and makes learning a more natural process. I also learned that librarians need to advocate for their library and its resources. In two courses, booktalking & booktrailering and reference services, I learned how to use my creative side in the library by making videos promoting literature (and this could be applied to much more!). Coding with Python and Javascript is often challenging and frustrating, but this accomplishes two important points: first, I am learning new technology that is quickly becoming more widely used and more important to understanding computers, and second, I am practicing learning something new (like patrons visiting the library) and remembering how difficult that is.</p>
 
     <h4> My favorite courses: </h4>
+    <p> There are lots of great courses in this program. These are some that I considered relevant to my own interests! But this is not an exhaustive list of good courses by any means. </p>
     <ul>
-        <li> INFO 254: Information literacy & learning </li>
-        <li> INFO 210: Reference services </li>
-        <li> INFO 240: Information technology, tools & applications (HTML & CSS) </li>
-        <li> INFO 246-11: (SQL, Python, Javascript & PHP) </li>
-        <li> INFO 285: Applied research methods: Research in academic libraries </li>
+        <li> <span style="font-weight:bolder;">INFO 254: Information literacy & learning </span>- I learned how to make interactive, multimedia teaching materials in this course! </li>
+        <li> <span style="font-weight:bolder;">INFO 210: Reference services </span>- I learned useful tutoring skills & practiced interpreting and answering real reference questions in this course! </li>
+        <li> <span style="font-weight:bolder;">INFO 240: Information technology, tools & applications (HTML & CSS) </span>- I learned how to make websites like this one! </li>
+        <li> <span style="font-weight:bolder;">INFO 246-11: (SQL, Python, Javascript & PHP) </span>- I learned how to make programs and games, and there is so much more here that I hope to learn in the future. </li>
+        
+        <li> <span style="font-weight:bolder;">INFO 285: Applied research methods: Research in academic libraries </span>- I learned how to make good forms and questionnaires, as well as how to conduct research. </li>
     </ul> 
 
     <h4> Workplaces where I've used the skills taught in this program: </h4>
+    <p> I am grateful to have had the opportunity to practice what I've learned in this program to real work situations. I want to again promote interdisciplinary work - with this MLIS, it's possible to work in lots of different places, including the library. There are lots of possibilities. I included all the jobs (and professional organizations) I've worked for in the past (approximately) two years, and I've enjoyed each of these working experiences. </p>
     <ul> 
-        <li> Customer service employee (2015 - 2019) </li>
+        <li> Customer service employee (up to 2019) </li>
         <li> Substitute teaching (2020) </li>
-        <li> Library assistant - Health sciences undergraduate program </li>
-        <li> Park aide - CA State Parks (Sutter's Fort & State Indian Museum) </li>
-    </ul>
+        <li> Library assistant - Health sciences undergraduate program (2020-present) </li>
+        <li> Park aide - CA State Parks (Sutter's Fort & State Indian Museum) (2020-present)</li>
+        <li> Writing group member - The Warped Spacers (2020 - present)</li>
+        <li> ALASC board member - (2021 - 2022)</li>
+    </ul> <br> 
+
+    <img src="images/bergis.png" style="width:375px; height:auto; float:left; padding-right:25px; padding-bottom:15px;"> 
+
+    <p style="display:block;"> <span style="font-weight:bolder;"> Left: In this blog post, Luke Burgis wrote as advice to "live out your personal vocation." </span> He further explains that "When you have a mission, it begins to act like an interpretative key to everything and allows you to know what to pay attention to" (<a href="https://read.lukeburgis.com/p/25-anti-mimetic-ideas?s=r">The Fourth Wall</a>). This blog post may require a subscription to read. If so: to the left is a picture of the section I reference here. I do feel like librarianship is my "interpretive key to everything." </p> 
+    <p> Librarianship is my "key to everything." I really enjoy hobbies like running, playing the piano, gardening, and hiking. I also enjoy participating in my science fiction writing group, and making art projects with my sister. In these extra-curriculars, I find myself employing the concepts that I learned in thsi MLIS program, especially in reference and information literacy, where we discussed how to 'determine the patron's real question' and how to teach patrons how to teach themselves. I also have learned to embrace my interdisciplinary side. I studied the health sciences and history in college, and didn't expect these interests to overlap in a future career. Except that now, I am a library assistant at a health sciences college, and I get to create projects like "health heroes from history." Librarianship has combined many aspects of my life into one common thread. </p>
+
 
     <h4> Thanks for reading! </h4>
     <img src="images/bye.png" style="width:150px; height:150px; float:left; padding-right:20px;"> 
