--- a/intro.html
+++ b/intro.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Introduction </title>
-  <meta name="description" content="Website showcasing my progress, achievements, and lessons learned while in my MLIS program at San Jose State.">
+  <title> Main page </title>
+  <meta name="description" content="Website for the Warped Spacers, a writing group. This website provides updates, collects writing achievements, updates the member list, and showcases photos for the group's amazing members. This main page shows the most important information regarding the Spacers.">
   <link rel="stylesheet" media = "screen" href="css/style.css">
   <link rel="stylesheet" media = "print" href="css/print.css">
 
@@ -12,8 +12,8 @@
 <body> 
     <div class="content-wrapper">
     <header class="banner"> 
-    <h1> Introduction </h1>
-    <h3> Sadie's E-Portfolio </h3>
+    <h1> Sadie Davenport's E-Portfolio </h1>
+    <h3> Spring 2022 </h3> 
     </header>
     <nav> 
         <ul class="navbar"> 
@@ -36,80 +36,27 @@
         <li class="navitem">  <a href="conclusion.html"> Conclusion </a></li>
         </ul>        
     </nav>
-    <aside> 
-        <h3> Definition: </h3>
-        <p> Here is an introduction to me, using pictures I've taken in the past two years of important people who've helped me in this MLIS journey. </p><br>
 
-        <h3> More information: </h3>
-        <ul>
-            <li>  <a href="main.html"> Main page </a></li>
-            <li>  <a href="#footer"> Contact information </a>
-        </ul>
+    <aside> 
+        <h3> Welcome! </h3>
+        <p> This is my e-portfolio site, published (privately) on Github, for free. I made this site using HTML, CSS, and Javascript, which I learned in three web development courses in SJSU's MLIS program. I wrote my HTML and CSS on Visual Studio Code, a free computer app. </p> <br>
+        <h3> Navigation: </h3>
+        <p> <span style="font-weight: bolder"> The navigation bar </span> at the top of the page contains links to each page of my portfolio. This bar is in the same place on each page. </p>
+        <p> Within each page, there is a <span style="font-weight: bolder"> sidebar to the left </span> (same as this sidebar) that defines and outlines each competency. Click the quick links there to jump to a particular part of a competency. </p>
+        <p> My <span style="font-weight: bolder"> contact information </span> is listed at the bottom of each page. </p> 
+        <p> This website has a <span style="font-weight: bolder"> responsive layout </span> to different screen widths, which means that the layout of each page will change as your screen or browser width changes (in order to better suit your screen size). </p><br>
+        <h3> Contents: </h3>
+        <p> My portfolio contains an introduction, conclusion, and competencies A-O, which break down what I have learned and practiced in this program into thematic groups. </p> <br> 
     </aside>
     <main> 
-        <h3> Introduction to me, Sadie, and the people who've helped me in this MLIS! </h3>
-
-        <p> When I started this program in August 2020, I was starting many new things at once. Two part-time jobs, and a writing group. I was fortunate to have the support of my friends and family throughout this program. Their impact on me has helped me become the LIS professional I am today. By seeing pictures of me, my workplaces, and the people in my support system, you'll have a good introduction to who I am! </p>
-
-        <div style="float:left;"> <img src="images/layne.JPG" style="width:300px; height:auto; padding:15px;"></div>
-        <div> 
-            <h4> My BFF at work: Layne! </h4>
-            <p> This is my best friend at work, Layne! She runs the front desk at California Northstate University, where I work. In this picture, she is celebrating my new iPad! I love Layne's positivity and go-getter attitude. She always has creative ideas for the school, from making a monthly staff newsletter to decorating the front entrance on holidays! she helped me transform the library space into one that's more welcoming for students. Layne has helped me feel welcome at this university by introducing me to professors and updating me on important campus events. I'm grateful Layne's helped me so much at this position. </p>
-        </div>
-        <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;"> <img src="images/desk.JPG" style="width:300px; height:auto; padding:15px;"></div>
-        <div> 
-            <h4> My library desk in August 2020</h4>
-            <p> When I started my position as a college library assistant, this was what my desk looked like. It was a blank slate, and I was super excited to start working. Transforming this desk into an exciting workplace was a significant confidence boost for me. I decorated the wall behind my desk and the desk itself with useful content about the library for students and faculty. This was an opportunity to employ my LIS skills in the real world. </p>
-        </div>
-        <div style="display:block"> <br> </div>
-
-        <div style="float:left;">
-        <img src="images/sadieinthelibrary.jpg" style="width:300px; height:auto; padding:15px;"> 
-        </div>
-        <div> <h4> My library desk today! </h4>
-        <p> This is an example of how much I've grown! This photo (left) was taken about a year after the photo above. I am sitting in the same corner as pictured above! Just facing the library, rather than the copier. I feel that I am in my element when I'm at this library. </p></div>
-        <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;">
-            <img src="images/sadieranger.JPG" style="width:300px; height:auto; padding:15px;"> 
-            </div>
-            <div> <h4> At work as a state park aide! </h4>
-            <p> Here, I'm standing between Sutter's Fort State Historic Park and the State Indian Museum! Working here, between both museums, has been a great opportunity to learn about "interpretation," the State Parks teaching philosophy, and to study history on both California Native Americans and events in early Sacramento. I love being around museum artifacts and cultural items, and have even learned some curatorial skills.</p></div>
-            <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;">
-            <img src="images/IMG_0339.JPG" style="width:300px; height:auto; padding:15px;"> 
-            </div>
-            <div> <h4> Girls day in State Parks! </h4>
-            <p> Here, my coworkers Maria, Maggie and I worked the same Valentine's Day shift and celebrated with very serious and official uniform headbands. </p></div>
-            <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;"> <img src="images/warped spacers.png" style="width:300px; height:auto; padding:15px;"> </div>
-        <div> <h4> The Warped Spacers </h4>
-        <p> This is a screenshot of a zoom meeting with members of my writing group, The Warped Spacers (left). In this photo, we're all looking serious, but these are brief moments between more laughter and discussion! For the past two years, I have submitting writing for this group to review, and have reviewed the works of these members. Improving my writing and reading more literature is important to me as an LIS professional. </p> </div>  
-        <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;"><img src="images/stella.jpg" style="width:300px; height:auto; padding:15px;"> </div>
-        <div> <h4> My sister, Stella! </h4>
-        <p> My sister is a high school freshman this year (2022). She is a talented and amazing young woman, and she and I have spent most Friday nights in the past two years eating takeout and watching fun TV! I learn from my sister every day. She lets me show her cool assignments I've done in this program, and is often the camera woman behind my videos. </p></div>
-        <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;"><img src="images/shadie.jpg" style="width:300px; height:auto; padding:15px;"></div>
-        <div><h4> My boyfriend, Shane! </h4>
-        <p> This photo (left) is of my boyfriend, Shane, and I in Winter Park, Colorado (but in the fall!).Shane and I have worked on our respective masters programs at the same time, which was excellent but coincidental timing. As a result, we were able to support each other throughout our programs. Shane graduated in December 2021! Shane also introduced me to coding languages and encouraged me to learn more about them, especially for information science, and I am grateful that he did! </p></div>
-        <div style="clear:both;"> <br> </div>
-
-        <div style="float:left;"> <img src="images/santa.jpg" style="width:300px; height:auto; padding:15px;"> </div>
-        <div> <h4> My parents! </h4>
-        <p> This photo was taken at a race where parents, sister and I ran a 5k together, dressed up as Santa! My parents have been kind enough to let me live in their barn while completing this MLIS program! They also make an excellent audience while I practice my library presentations. I couldn't have done this without them. </p> </div>       
-        <div style="clear:both;"> <br> </div>
+        <h3> Author of this E-Portfolio: Sadie Davenport </h3>
+        <img class="sadielibrary" src="images/sadieinthelibrary.jpg"> Me (Sadie) in the library. </img>
+        <p> Here I am, in the library! This photo is a good introduction to who I am as a library professional. This photo shows my workplace, which is important to me. I am a library assistant at California Northstate University in Rancho Cordova, California. I started working in this position at the same time I started the program: August 2020. Much of the evidence and learning experiences I gained outside of this MLIS program, I gained through my experience here in this library, by working in the field. </p>
 
     </main>
-    <footer id="footer"> 
-        <h3> Contact me: </h3>
-        <p> Feel free to email me at sadie.davenport@sjsu.edu </p>
-    </footer>
+        <footer id="footer"> 
+            <h3> Contact me: </h3>
+            <p> Feel free to email me at sadie.davenport@sjsu.edu </p>
+        </footer>
 </div>
 </body>
