--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Main page </title>
-  <meta name="description" content="Website showcasing my progress, achievements, and lessons learned while in my MLIS program at San Jose State.">
+  <meta name="description" content="Website for the Warped Spacers, a writing group. This website provides updates, collects writing achievements, updates the member list, and showcases photos for the group's amazing members. This main page shows the most important information regarding the Spacers.">
   <link rel="stylesheet" media = "screen" href="css/style.css">
   <link rel="stylesheet" media = "print" href="css/print.css">
 
@@ -15,7 +15,7 @@
     <h1> Sadie Davenport's E-Portfolio </h1>
     <h3> Spring 2022 </h3> 
     </header>
-        <nav> 
+    <nav> 
         <ul class="navbar"> 
         <li class="navitem"> <a href="main.html"> Main page </a></li>
         <li class="navitem"> <a href="intro.html"> Introduction </a></li>
@@ -49,7 +49,7 @@
         <p> My portfolio contains an introduction, conclusion, and competencies A-O, which break down what I have learned and practiced in this program into thematic groups. </p> <br> 
     </aside>
     <main> 
-        <h3> Introduction </h3>
+        <h3> Author of this E-Portfolio: Sadie Davenport </h3>
         <img class="sadielibrary" src="images/sadieinthelibrary.jpg"> Me (Sadie) in the library. </img>
         <p> Here I am, in the library! This photo is a good introduction to who I am as a library professional. This photo shows my workplace, which is important to me. I am a library assistant at California Northstate University in Rancho Cordova, California. I started working in this position at the same time I started the program: August 2020. Much of the evidence and learning experiences I gained outside of this MLIS program, I gained through my experience here in this library, by working in the field. </p>
 
