--- a/intro.html
+++ b/intro.html
@@ -40,6 +40,10 @@
         <h3> Definition: </h3>
         <p> Here is an introduction to me, using pictures I've taken in the past two years of important people who've helped me in this MLIS journey. </p><br>
 
+        <h3> What is this E-Port? </h3>
+        <p> This e-portfolio is a display of all the skills and concepts I've learned in this MLIS program, and in experiences outside of coursework. There are fourteen (14) competencies, or learning concepts, and I have provided evidence that I understand each. As evidence, I've included coursework, and outside work. There is a link to access each "evidence" item, and these items may be: essays, projects, quizzes, multimedia (video or images), assignments, or written correspondence. </p>
+        <p> Some aspects of this MLIS I have learned more than others, and so in the conclusion section of each competency I've explained what I hope to learn in the future. I've also referenced LIS professionals who have published research on each competency in order to further explain what each competency means. Any questions are welcome, please click the contact information link below. </p>
+
         <h3> More information: </h3>
         <ul>
             <li>  <a href="main.html"> Main page </a></li>
