--- a/intro.html
+++ b/intro.html
@@ -62,7 +62,7 @@
         </div>
         <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"> <img src="images/desk.JPG" style="width:300px; height:auto; padding:15px;"></div>
+        <div style="float:left;"> <img src="images/desk.jpg" style="width:300px; height:auto; padding:15px;"></div>
         <div> 
             <h4> My library desk in August 2020</h4>
             <p> When I started my position as a college library assistant, this was what my desk looked like. It was a blank slate, and I was super excited to start working. Transforming this desk into an exciting workplace was a significant confidence boost for me. I decorated the wall behind my desk and the desk itself with useful content about the library for students and faculty. This was an opportunity to employ my LIS skills in the real world. </p>
