--- a/intro.html
+++ b/intro.html
@@ -51,18 +51,18 @@
         </ul>
     </aside>
     <main> 
-        <h3> Introduction to me, Sadie, and the people who've helped me in this MLIS! </h3>
+        <h3> Introduction to me (Sadie) and the people who've helped me in this MLIS! </h3>
 
-        <p> When I started this program in August 2020, I was starting many new things at once. Two part-time jobs, and a writing group. I was fortunate to have the support of my friends and family throughout this program. Their impact on me has helped me become the LIS professional I am today. By seeing pictures of me, my workplaces, and the people in my support system, you'll have a good introduction to who I am! </p>
+        <p> When I started this program in August 2020, I was starting many new things at once. Two part-time jobs, and a writing group. I was fortunate to have the support of my friends and family throughout this program. Their impact on me has helped me become the LIS professional I am today. By seeing pictures of me, my workplaces, and the people in my support system, you'll have a good introduction to who I am! </p> <br>
 
-        <div style="float:left;"> <img src="images/layne.JPG" style="width:300px; height:auto; padding:15px;"></div>
+        <div style="float:left;"> <img src="images/layne.JPG" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"></div>
         <div> 
             <h4> My BFF at work: Layne! </h4>
             <p> This is my best friend at work, Layne! She runs the front desk at California Northstate University, where I work. In this picture, she is celebrating my new iPad! I love Layne's positivity and go-getter attitude. She always has creative ideas for the school, from making a monthly staff newsletter to decorating the front entrance on holidays! she helped me transform the library space into one that's more welcoming for students. Layne has helped me feel welcome at this university by introducing me to professors and updating me on important campus events. I'm grateful Layne's helped me so much at this position. </p>
         </div>
         <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"> <img src="images/desk.jpg" style="width:300px; height:auto; padding:15px;"></div>
+        <div style="float:left;"> <img src="images/desk.jpg" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"></div>
         <div> 
             <h4> My library desk in August 2020</h4>
             <p> When I started my position as a college library assistant, this was what my desk looked like. It was a blank slate, and I was super excited to start working. Transforming this desk into an exciting workplace was a significant confidence boost for me. I decorated the wall behind my desk and the desk itself with useful content about the library for students and faculty. This was an opportunity to employ my LIS skills in the real world. </p>
@@ -70,42 +70,42 @@
         <div style="display:block"> <br> </div>
 
         <div style="float:left;">
-        <img src="images/sadieinthelibrary.jpg" style="width:300px; height:auto; padding:15px;"> 
+        <img src="images/sadieinthelibrary.jpg" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"> 
         </div>
         <div> <h4> My library desk today! </h4>
         <p> This is an example of how much I've grown! This photo (left) was taken about a year after the photo above. I am sitting in the same corner as pictured above! Just facing the library, rather than the copier. I feel that I am in my element when I'm at this library. </p></div>
         <div style="clear:both;"> <br> </div>
 
         <div style="float:left;">
-            <img src="images/sadieranger.JPG" style="width:300px; height:auto; padding:15px;"> 
+            <img src="images/sadieranger.JPG" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"> 
             </div>
             <div> <h4> At work as a state park aide! </h4>
-            <p> Here, I'm standing between Sutter's Fort State Historic Park and the State Indian Museum! Working here, between both museums, has been a great opportunity to learn about "interpretation," the State Parks teaching philosophy, and to study history on both California Native Americans and events in early Sacramento. I love being around museum artifacts and cultural items, and have even learned some curatorial skills.</p></div>
+            <p> Here, I'm standing between Sutter's Fort State Historic Park and the State Indian Museum! Working here, between both museums, has been a great opportunity to learn about "interpretation," the State Parks teaching philosophy, and to study history on both California Native Americans and events in early Sacramento history. I love being around museum artifacts and cultural items, and have even learned some curatorial skills.</p></div>
             <div style="clear:both;"> <br> </div>
 
         <div style="float:left;">
-            <img src="images/IMG_0339.JPG" style="width:300px; height:auto; padding:15px;"> 
+            <img src="images/IMG_0339.JPG" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"> 
             </div>
             <div> <h4> Girls day in State Parks! </h4>
             <p> Here, my coworkers Maria, Maggie and I worked the same Valentine's Day shift and celebrated with very serious and official uniform headbands. </p></div>
             <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"> <img src="images/warped spacers.png" style="width:300px; height:auto; padding:15px;"> </div>
+        <div style="float:left;"> <img src="images/warped spacers.png" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"> </div>
         <div> <h4> The Warped Spacers </h4>
         <p> This is a screenshot of a zoom meeting with members of my writing group, The Warped Spacers (left). In this photo, we're all looking serious, but these are brief moments between more laughter and discussion! For the past two years, I have submitting writing for this group to review, and have reviewed the works of these members. Improving my writing and reading more literature is important to me as an LIS professional. </p> </div>  
         <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"><img src="images/stella.jpg" style="width:300px; height:auto; padding:15px;"> </div>
+        <div style="float:left;"><img src="images/stella.jpg" style="width:300px; height:auto; padding-right:15px; padding-bottom:15px;"> </div>
         <div> <h4> My sister, Stella! </h4>
         <p> My sister is a high school freshman this year (2022). She is a talented and amazing young woman, and she and I have spent most Friday nights in the past two years eating takeout and watching fun TV! I learn from my sister every day. She lets me show her cool assignments I've done in this program, and is often the camera woman behind my videos. </p></div>
         <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"><img src="images/shadie.jpg" style="width:300px; height:auto; padding:15px;"></div>
+        <div style="float:left;"><img src="images/shadie.jpg" style="width:300px; height:auto; padding-right:15px;"></div>
         <div><h4> My boyfriend, Shane! </h4>
-        <p> This photo (left) is of my boyfriend, Shane, and I in Winter Park, Colorado (but in the fall!).Shane and I have worked on our respective masters programs at the same time, which was excellent but coincidental timing. As a result, we were able to support each other throughout our programs. Shane graduated in December 2021! Shane also introduced me to coding languages and encouraged me to learn more about them, especially for information science, and I am grateful that he did! </p></div>
+        <p> This photo is of my boyfriend Shane and I in Winter Park, Colorado (but in the fall!). Shane and I have worked on our respective masters programs at the same time, which was excellent and coincidental timing. As a result, we were able to support each other throughout our programs. Shane graduated in December 2021 with a masters in bioinformatics! Also, Shane introduced me to coding languages like Python and Javascript, and encouraged me to learn more about them, especially for information science. I am so grateful he did! </p></div>
         <div style="clear:both;"> <br> </div>
 
-        <div style="float:left;"> <img src="images/santa.jpg" style="width:300px; height:auto; padding:15px;"> </div>
+        <div style="float:left;"> <img src="images/santa.jpg" style="width:300px; height:auto; padding-right:15px;"> </div>
         <div> <h4> My parents! </h4>
         <p> This photo was taken at a race where parents, sister and I ran a 5k together, dressed up as Santa! My parents have been kind enough to let me live in their barn while completing this MLIS program! They also make an excellent audience while I practice my library presentations. I couldn't have done this without them. </p> </div>       
         <div style="clear:both;"> <br> </div>
