--- a/intro.html
+++ b/intro.html
@@ -102,7 +102,7 @@
 
         <div style="float:left;"><img src="images/shadie.jpg" style="width:300px; height:auto; padding-right:15px;"></div>
         <div><h4> My boyfriend, Shane! </h4>
-        <p> This photo is of my boyfriend Shane and I in Winter Park, Colorado (but in the fall!). Shane and I have worked on our respective masters programs at the same time, which was excellent and coincidental timing. As a result, we were able to support each other throughout our programs. Shane graduated in December 2021 with a masters in bioinformatics! Also, Shane introduced me to coding languages like Python and Javascript, and encouraged me to learn more about them, especially for information science. I am so grateful he did! </p></div>
+        <p> This photo is of my boyfriend Shane and I in Winter Park, Colorado (but in the fall!). Shane and I have worked on our respective masters programs at the same time, which was excellent and coincidental timing. As a result, we were able to support each other throughout our programs. Shane graduated in December 2021 with a masters in bioinformatics! Also, Shane introduced me to coding languages like Python and Javascript, and encouraged me to learn more about them, especially for information science. I am so grateful he did! And grateful we can pursue our careers together! </p></div>
         <div style="clear:both;"> <br> </div>
 
         <div style="float:left;"> <img src="images/santa.jpg" style="width:300px; height:auto; padding-right:15px;"> </div>
